# DataStructures

./: CMakeLists.txt  LICENSE  README.md
src/array/: array.h
src/dynamic_array/: dynamic_array.c
src/tests/: bordel.c
structures/: CMakeLists.txt
structures/array/: CMakeLists.txt
structures/array/src/manipulation/: array_test.c
structures/array/src/structure/: array.c  array.h
structures/src/array/: array.c
structures/src/dynamic_array/: dynamic_array.c  dynamic_array.h
structures/src/tests/: array_test.c
